--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple To-Do List web app to log your daily tasks.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "Bern",
@@ -15,7 +15,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
